improving docs and changing makefile to build docker
