# docs/swagger/swagger.yaml
@@ -1,5 +1,10 @@
 basePath: /
 definitions:
+  api.ErrorResponse:
+    properties:
+      message:
+        type: string
+    type: object
   api.RandomQuoteJSON:
     properties:
       channel:
@@ -42,6 +47,14 @@ paths:
         name: username
         required: true
         type: string
+      - description: unix timestamp, limit logs by timestamps from this point
+        in: query
+        name: from
+        type: integer
+      - description: unix timestamp, limit logs by timestamps to this point
+        in: query
+        name: to
+        type: integer
       - description: response as json
         in: query
         name: json
@@ -55,8 +68,60 @@ paths:
       - application/json
       - text/plain
       responses:
+        "200": {}
         "303": {}
+        "404": {}
+        "500": {}
       summary: Redirect to last logs of user
+      tags:
+      - user
+  /channel/{channel}/user/{username}/{year}/{month}:
+    get:
+      parameters:
+      - description: channelname
+        in: path
+        name: channel
+        required: true
+        type: string
+      - description: username
+        in: path
+        name: username
+        required: true
+        type: string
+      - description: year of logs
+        in: path
+        name: year
+        required: true
+        type: string
+      - description: month of logs
+        in: path
+        name: month
+        required: true
+        type: string
+      - description: unix timestamp, limit logs by timestamps from this point
+        in: query
+        name: from
+        type: integer
+      - description: unix timestamp, limit logs by timestamps to this point
+        in: query
+        name: to
+        type: integer
+      - description: response as json
+        in: query
+        name: json
+        type: any
+      - description: define response type only json supported currently, rest defaults
+          to plain
+        in: query
+        name: type
+        type: string
+      produces:
+      - application/json
+      - text/plain
+      responses:
+        "200": {}
+        "500": {}
+      summary: Get logs for user by year and month
       tags:
       - user
   /channel/{channel}/user/{username}/random:
@@ -93,4 +158,145 @@ paths:
       summary: Get a random chat message from a user
       tags:
       - user
+  /channelid/{channelid}/user/{userid}:
+    get:
+      parameters:
+      - description: twitch userid
+        in: path
+        name: channelid
+        required: true
+        type: string
+      - description: twitch userid
+        in: path
+        name: userid
+        required: true
+        type: string
+      - description: unix timestamp, limit logs by timestamps from this point
+        in: query
+        name: from
+        type: integer
+      - description: unix timestamp, limit logs by timestamps to this point
+        in: query
+        name: to
+        type: integer
+      - description: response as json
+        in: query
+        name: json
+        type: any
+      - description: define response type only json supported currently, rest defaults
+          to plain
+        in: query
+        name: type
+        type: string
+      produces:
+      - application/json
+      - text/plain
+      responses:
+        "200": {}
+        "303": {}
+        "404": {}
+      summary: Redirect to last logs of user
+      tags:
+      - user
+  /channelid/{channelid}/userid/{userid}/{year}/{month}:
+    get:
+      parameters:
+      - description: twitch userid
+        in: path
+        name: channelid
+        required: true
+        type: string
+      - description: twitch userid
+        in: path
+        name: userid
+        required: true
+        type: string
+      - description: year of logs
+        in: path
+        name: year
+        required: true
+        type: string
+      - description: month of logs
+        in: path
+        name: month
+        required: true
+        type: string
+      - description: unix timestamp, limit logs by timestamps from this point
+        in: query
+        name: from
+        type: integer
+      - description: unix timestamp, limit logs by timestamps to this point
+        in: query
+        name: to
+        type: integer
+      - description: response as json
+        in: query
+        name: json
+        type: any
+      - description: define response type only json supported currently, rest defaults
+          to plain
+        in: query
+        name: type
+        type: string
+      produces:
+      - application/json
+      - text/plain
+      responses:
+        "200": {}
+        "500": {}
+      summary: Get logs for user by year and month
+      tags:
+      - user
+  /channelid/{channelid}/userid/{userid}/random:
+    get:
+      parameters:
+      - description: twitch userid
+        in: path
+        name: channelid
+        required: true
+        type: string
+      - description: twitch userid
+        in: path
+        name: userid
+        required: true
+        type: string
+      - description: response as json
+        in: query
+        name: json
+        type: any
+      - description: define response type only json supported currently, rest defaults
+          to plain
+        in: query
+        name: type
+        type: string
+      produces:
+      - application/json
+      - text/plain
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.RandomQuoteJSON'
+            type: object
+      summary: Get a random chat message from a user
+      tags:
+      - user
+  /channels:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.RandomQuoteJSON'
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+            type: object
+      summary: Get all joined channels
+      tags:
+      - bot
 swagger: "2.0"
